fireworks effect added

--- a/welcome.html
+++ b/welcome.html
@@ -1,19 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <style>
+      #tsparticles {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+      }
+      .container {
+        position: relative;
+        color: rgb(255, 255, 255);
+        backdrop-filter: blur(5px);
+        background-color: rgba(255, 255, 255, 0);
+        box-shadow: rgba(0, 179, 255, 0.12) 0px 2px 4px 0px, rgba(38, 255, 118, 0.32) 0px 2px 16px 0px;
+        z-index: 1;
+      }
+    </style>
+  </head>
+  <body>
     <div class="container">
-        <div class="login-step active">
-            <h2>Welcome!</h2>
-            <p>You have successfully logged in.</p>
-        </div>
+      <div class="login-step active">
+        <h2>Welcome!</h2>
+        <p>You have successfully logged in.</p>
+      </div>
     </div>
-    <script src="js/script.js"></script>
-</body>
+    <div id="tsparticles"></div>
+    <script type="module">
+      import { tsParticles } from "https://cdn.jsdelivr.net/npm/@tsparticles/engine@3.1.0/+esm";
+      import { loadAll } from "https://cdn.jsdelivr.net/npm/@tsparticles/all@3.1.0/+esm";
+
+      async function loadParticles(options) {
+        await loadAll(tsParticles);
+
+        const particles = await tsParticles.load({ id: "tsparticles", options });
+      }
+
+      const configs = {
+        name: "Fireworks Mask",
+        fullScreen: {
+          enable: false,
+        },
+        background: {
+          color: "#000000",
+          image: "url('https://particles.js.org/images/background3.jpg')",
+          position: "50% 50%",
+          repeat: "no-repeat",
+          size: "cover",
+        },
+        backgroundMask: {
+          enable: true,
+          cover: {
+            color: "#000",
+          },
+        },
+        emitters: {
+          direction: "top",
+          life: {
+            count: 0,
+            duration: 0.1,
+            delay: 0.1,
+          },
+          rate: {
+            delay: 0.15,
+            quantity: 1,
+          },
+          size: {
+            width: 100,
+            height: 0,
+          },
+          position: {
+            y: 100,
+            x: 50,
+          },
+        },
+        particles: {
+          color: {
+            value: "#fff",
+          },
+          number: {
+            value: 0,
+          },
+          destroy: {
+            bounds: {
+              top: 30,
+            },
+            mode: "split",
+            split: {
+              count: 1,
+              factor: {
+                value: 0.333333,
+              },
+              rate: {
+                value: 100,
+              },
+              particles: {
+                stroke: {
+                  width: 0,
+                },
+                color: {
+                  value: [
+                    "#ff595e",
+                    "#ffca3a",
+                    "#8ac926",
+                    "#1982c4",
+                    "#6a4c93",
+                  ],
+                },
+                number: {
+                  value: 0,
+                },
+                collisions: {
+                  enable: false,
+                },
+                destroy: {
+                  bounds: {
+                    top: 0,
+                  },
+                },
+                opacity: {
+                  value: {
+                    min: 0.1,
+                    max: 1,
+                  },
+                  animation: {
+                    enable: true,
+                    speed: 0.7,
+                    sync: false,
+                    startValue: "max",
+                    destroy: "min",
+                  },
+                },
+                effect: {
+                  type: "trail",
+                  options: {
+                    trail: {
+                      length: {
+                        min: 5,
+                        max: 10,
+                      },
+                    },
+                  },
+                },
+                shape: {
+                  type: "circle",
+                },
+                size: {
+                  value: 2,
+                  animation: {
+                    enable: false,
+                  },
+                },
+                life: {
+                  count: 1,
+                  duration: {
+                    value: {
+                      min: 1,
+                      max: 2,
+                    },
+                  },
+                },
+                move: {
+                  enable: true,
+                  gravity: {
+                    enable: true,
+                    acceleration: 9.81,
+                    inverse: false,
+                  },
+                  decay: 0.1,
+                  speed: {
+                    min: 10,
+                    max: 25,
+                  },
+                  direction: "outside",
+                  outModes: "destroy",
+                },
+              },
+            },
+          },
+          life: {
+            count: 1,
+          },
+          effect: {
+            type: "trail",
+            options: {
+              trail: {
+                length: {
+                  min: 10,
+                  max: 30,
+                },
+                minWidth: 1,
+                maxWidth: 1,
+              },
+            },
+          },
+          rotate: {
+            path: true,
+          },
+          shape: {
+            type: "circle",
+          },
+          size: {
+            value: 1,
+          },
+          move: {
+            enable: true,
+            gravity: {
+              acceleration: 15,
+              enable: true,
+              inverse: true,
+              maxSpeed: 100,
+            },
+            speed: {
+              min: 10,
+              max: 20,
+            },
+            outModes: {
+              default: "destroy",
+              top: "none",
+            },
+          },
+        },
+        sounds: {
+          enable: true,
+          events: [
+            {
+              event: "particleRemoved",
+              filter: (args) => args.data.particle.options.move.gravity.inverse,
+              audio: [
+                "https://particles.js.org/audio/explosion0.mp3",
+                "https://particles.js.org/audio/explosion1.mp3",
+                "https://particles.js.org/audio/explosion2.mp3",
+              ],
+            },
+          ],
+          volume: 50,
+        },
+      };
+      loadParticles(configs);
+    </script>
+  </body>
 </html>
